--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body {
     background-color: #bbbbbb;
     color: white;
     padding: 10px; }
+    body .header h1 {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 50px; }
   body .container {
     max-width: 960px;
     margin-left: auto;
@@ -14,9 +19,10 @@ body {
     background-color: white;
     color: black;
     padding: 50px; }
-  body .eventDark {
-    max-width: 960px;
-    background-color: grey;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 50px; }
+    body .container .eventDark {
+      background-color: #4d4d4d;
+      padding: 30px;
+      color: white; }
+    body .container .eventLight {
+      background-color: grey;
+      padding: 30px; }
