--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,13 @@ body {
         background-color: darken($basecolor, 20%);
         color: white;
         padding: 10px;
+
+        h1 {
+            max-width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 50px;
+        }
     }
     .container {
         max-width: 960px;
@@ -17,12 +24,17 @@ body {
         background-color: white;
         color: black;
         padding: 50px;
+
+        .eventDark {
+            background-color: darken($eventcolor, 20%);
+            padding: 30px;
+            color: white;
+        }
+
+        .eventLight {
+            background-color: $eventcolor;
+            padding: 30px;
+        }
     }
-    .eventDark {
-        max-width: 960px;
-        background-color: $eventcolor;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 50px;
-    }
+
 }
