Test av kalenderoppsett

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   color: white;
   margin: 0;
   font-family: "Arial", sans-serif; }
+  body .cal {
+    background-color: #697F79;
+    height: auto;
+    margin: 3px; }
   body .header {
     background-color: #68a693;
     color: white;
