--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ body {
 
     .cal {
         background-color: #697F79;
-        height: auto;
+        height: 150px;
         margin: 3px;
     }
 
