--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,16 @@ body {
   color: white;
   margin: 0;
   font-family: "Arial", sans-serif; }
+  body .calRow {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto; }
   body .cal {
-    background-color: #697F79;
+    background-color: #c8dfd8;
     height: 150px;
-    margin: 3px; }
+    width: 172px;
+    padding: 15px;
+    border: 1px solid #e2eeea; }
   body .header {
     background-color: #68a693;
     color: white;
