--- a/style.scss
+++ b/style.scss
@@ -6,10 +6,18 @@ body {
     margin: 0;
     font-family: "Arial", sans-serif;
 
+    .calRow {
+        max-width: 960px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     .cal {
-        background-color: #697F79;
+        background-color: lighten($basecolor, 10%);
         height: 150px;
-        margin: 3px;
+        width: 172px;
+        padding: 15px;
+        border: 1px solid lighten($basecolor, 18%);
     }
 
     .header {
