--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,13 @@
+
+
+/*****************************************/
+
 $basecolor: #A8CCC1;
 $eventcolor: #697F79;
+
+
+/***************** Main content ************************/
+
 body {
     background-color: $basecolor;
     color: white;
@@ -20,19 +28,7 @@ body {
         border: 1px solid lighten($basecolor, 18%);
     }
 
-    .header {
-        background-color: darken($basecolor, 20%);
-        color: white;
-        padding: 10px;
-
-        h1 {
-            max-width: 960px;
-            margin-left: auto;
-            margin-right: auto;
-            padding: 50px;
-        }
-    }
-    .container {
+        .container {
         max-width: 960px;
         margin-left: auto;
         margin-right: auto;
@@ -53,4 +49,28 @@ body {
         }
     }
 
-}
+
+/**************** Header *************************/
+        .header {
+        background-color: darken($basecolor, 20%);
+        color: white;
+        padding: 10px;
+
+        h1 {
+            max-width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 50px;
+        }
+    }
+/*****************************************/
+/*****************************************/
+/*****************************************/
+
+
+
+
+
+
+
+}///End body
