--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 
 
-/*****************************************/
+/***************** constants ************************/
 
 $basecolor: #A8CCC1;
 $eventcolor: #697F79;
