--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
+/***************** constants ************************/
+/***************** Main content ************************/
 body {
   background-color: #A8CCC1;
   color: white;
   margin: 0;
-  font-family: "Arial", sans-serif; }
+  font-family: "Arial", sans-serif;
+  /**************** Header *************************/
+  /*****************************************/
+  /*****************************************/
+  /*****************************************/ }
   body .calRow {
     max-width: 960px;
     margin-left: auto;
@@ -10,18 +16,8 @@ body {
   body .cal {
     background-color: #c8dfd8;
     height: 150px;
-    width: 172px;
     padding: 15px;
     border: 1px solid #e2eeea; }
-  body .header {
-    background-color: #68a693;
-    color: white;
-    padding: 10px; }
-    body .header h1 {
-      max-width: 960px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 50px; }
   body .container {
     max-width: 960px;
     margin-left: auto;
@@ -37,3 +33,12 @@ body {
       background-color: #697F79;
       padding: 30px;
       color: white; }
+  body .header {
+    background-color: #68a693;
+    color: white;
+    padding: 10px; }
+    body .header h1 {
+      max-width: 960px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 50px; }
