kommentarere på vad komponenterna gør

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,3 +1,5 @@
+<!-- this component fetch info to be displayed in list and calender -->
+
 <div class="row">
     <div class="col-sm-4">
         <div class="pull-left">Previous</div>
