--- a/components/list.html
+++ b/components/list.html
@@ -1,3 +1,5 @@
+<!-- this component is showing the info in the list -->
+
 <div class="eventDark">
     <div class="row">
         <div class="col-sm-5">
