--- a/style.scss
+++ b/style.scss
@@ -62,22 +62,17 @@ body {
     }
 /********************* List ********************/
 
+
 .scrollToTopBtn{
-	width: 100px;
-	height: 70px;
-	padding: 10px;
-    margin: 0 auto;
-	text-align: center;
-	background-color: skyblue;
-	font-weight: bold;
-	color: #444;
-	text-decoration: none;
-	position: fixed;
-	bottom: 0px;
-	right: 40px;
-	display: none;
-	/*background: url('arrow_up.png') no-repeat 0px 20px;*/ /*FINN IKON*/
+    /*text-align: center;*/
+    /*position: relative;*/
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+    color: rgb(0, 0, 0);
 }
+
 
 
 
