--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,9 +1,25 @@
 <!-- this component fetch info to be displayed in list and calender -->
 
+<!-- Versjon 3 bootstrap-klasser
 <nav aria-label="..." role="navigation">
   <ul class="pager">
     <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Previous</a></li>
       <li class="disabled"><a href="#">This week</a></li>
     <li class="next"><a href="#">Next <span aria-hidden="true">&rarr;</span></a></li>
   </ul>
+</nav>
+-->
+
+<nav aria-label="..." role="navigation">
+    <ul class="nav d-flex justify-content-between">
+      <li class="nav-item">
+        <a class="nav-link" href="#"><span aria-hidden="true">&larr;</span> Previous</a>
+      </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="#">This week</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Next  <span aria-hidden="true">&rarr;</span></a>
+      </li>
+    </ul>
 </nav>
