--- a/style.scss
+++ b/style.scss
@@ -14,12 +14,9 @@ body {
     font-family: "Arial", sans-serif;
 
     .container {
-        max-width: 960px;
-        margin-left: auto;
-        margin-right: auto;
         background-color: white;
         color: black;
-        padding: 50px;
+        padding: 20px;
 
         .eventDark {
             background-color: darken($eventcolor, 20%);
@@ -41,16 +38,26 @@ body {
         color: white;
         padding: 10px;
 
-        h1 {
-            max-width: 960px;
+        h1, h2, h3 {
+            max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
-            padding: 50px;
+            padding: 20px;
         }
+
     }
 /******************* Navigation **********************/
 
+    .nav {
+        a {
+          color: darken($eventcolor, 20%);
+        }
 
+        a:hover {
+            color: $eventcolor;
+        }
+
+    }
 
 /****************** Calender ***********************/
 
