--- a/components/navigation.html
+++ b/components/navigation.html
@@ -13,13 +13,13 @@
 <nav aria-label="..." role="navigation">
     <ul class="nav d-flex justify-content-between">
       <li class="nav-item">
-        <a class="nav-link" href="#"><span aria-hidden="true">&larr;</span> Previous</a>
+        <a class="nav-link" id="prevBtn" href="#"><span aria-hidden="true">&larr;</span> Previous</a>
       </li>
     <li class="nav-item">
-        <a class="nav-link active" href="#">This week</a>
+        <a class="nav-link active" id="thisWeekBtn" href="#">This week</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Next  <span aria-hidden="true">&rarr;</span></a>
+        <a class="nav-link" id="nextBtn" href="#">Next  <span aria-hidden="true">&rarr;</span></a>
       </li>
     </ul>
 </nav>
