--- a/components/list.html
+++ b/components/list.html
@@ -3,7 +3,7 @@
 <div class="eventDark">
     <div class="row">
         <div class="col-sm-5">
-            <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+            <img src="img/event1.jpg" class="img-fluid" alt="Bilde av event">
         </div>
         <div class="col-sm-7">
             <h2>Gameplan</h2>
@@ -15,7 +15,7 @@
 <div id="#secondInfo" class="eventLight">
             <div class="row">
         <div class="col-sm-5">
-            <img src="img/git.png" class="img-responsive" alt="Bilde av git-event">
+            <img src="img/git.png" class="img-fluid" alt="Bilde av git-event">
         </div>
         <div class="col-sm-7">
             <h2>Git</h2>
@@ -27,7 +27,7 @@
 <div class="eventDark">
     <div class="row">
         <div class="col-sm-5">
-            <img src="img/event1.jpg" class="img-responsive" alt="Bilde av event">
+            <img src="img/event1.jpg" class="img-fluid" alt="Bilde av event">
         </div>
         <div class="col-sm-7">
             <h2>Gameplan</h2>
