scrollDown & main.js

--- a/components/calender.html
+++ b/components/calender.html
@@ -1,9 +1,11 @@
 <!-- this component shows the info in the calender -->
 
 <div class="table table-responsive">
+
     <table>
         <tr>
-          <td class="cal">Git<a href="#secondInfo">Click to scroll down</a></td>
+
+          <td class="cal">Git</td>
           <td class="cal">React</td>
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
