--- a/components/list.html
+++ b/components/list.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div id="#secondInfo" class="eventLight">
+<div class="eventLight secondInfo">
             <div class="row">
         <div class="col-sm-5">
             <img src="img/git.png" class="img-fluid" alt="Bilde av git-event">
