Nytt kalender-oppsett (mobile first). Noen nye klasser i scss

--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
 <!-- this component shows info in header -->
 
 <div class="header">
-    <h3>Show & Do</h3>
+    <div class="logo">Show & Do</div>
 </div>
