--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ body {
       color: white; }
   body .header {
     background-color: #68a693;
-    color: white;
-    padding: 10px; }
+    color: white; }
     body .header h1, body .header h2, body .header h3 {
       max-width: 1200px;
       margin-left: auto;
       margin-right: auto;
       padding: 20px; }
+    body .header .logo {
+      padding: 1em; }
   body .nav a {
     color: #3b4744; }
   body .nav a:hover {
@@ -38,6 +39,16 @@ body {
     background-color: #c8dfd8;
     padding: 15px;
     border: 1px solid #e2eeea; }
+  body .cal-mob {
+    background-color: #c8dfd8;
+    padding: 0.8em;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 0.2em;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px; }
   body .scrollToTopBtn {
     /*text-align: center;*/
     /*position: relative;*/
