--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,14 @@ $basecolor: #A8CCC1;
 $eventcolor: #697F79;
 
 
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
+
+
 /***************** index - Main content ************************/
 body {
     background-color: $basecolor;
@@ -36,13 +44,16 @@ body {
     .header {
         background-color: darken($basecolor, 20%);
         color: white;
-        padding: 10px;
 
         h1, h2, h3 {
             max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
             padding: 20px;
+        }
+
+        .logo {
+            padding: 1em;
         }
 
     }
@@ -65,6 +76,15 @@ body {
         background-color: lighten($basecolor, 10%);
         padding: 15px;
         border: 1px solid lighten($basecolor, 18%);
+    }
+
+    .cal-mob {
+        background-color: lighten($basecolor, 10%);
+        padding: 0.8em;
+        margin-left: 1em;
+        margin-right: 1em;
+        margin-bottom: 0.2em;
+        @include border-radius(4px);
     }
 /********************* List ********************/
 
