Litt tweaks på headers og scss

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -13,13 +13,13 @@
 <nav aria-label="..." role="navigation">
     <ul class="nav d-flex justify-content-between">
       <li class="nav-item">
-        <a class="nav-link" id="prevBtn" href="#"><span aria-hidden="true">&larr;</span> Previous</a>
+        <a class="nav-link" id="prevBtn" href="#"><i class="fa fa-chevron-left" aria-hidden="true"></i> Previous</a>
       </li>
     <li class="nav-item">
         <a class="nav-link active" id="thisWeekBtn" href="#">This week</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nextBtn" href="#">Next  <span aria-hidden="true">&rarr;</span></a>
+        <a class="nav-link" id="nextBtn" href="#">Next  <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
       </li>
     </ul>
 </nav>
