--- a/style.scss
+++ b/style.scss
@@ -2,8 +2,12 @@
 
 /***************** constants ************************/
 
+/* _MILITÆRSYKEHUSGRØNN_
 $basecolor: #A8CCC1;
-$eventcolor: #697F79;
+$eventcolor: #697F79;*/
+
+$basecolor: #1B98E0;
+$eventcolor: #D9D9D9;
 
 
 @mixin border-radius($radius) {
