--- a/components/calender.html
+++ b/components/calender.html
@@ -2,6 +2,7 @@
 
 <div class="table table-responsive">
 
+    <a ng-click="scrollTo('git')">More info: Git TEST</a><!--scrollTo more info TEST-->
 
     <table ng-controller = "ShowDoController">
 
@@ -13,7 +14,10 @@
         <!--
         <tr>
 
-          <td class="cal">Git</td>
+          <td class="cal">
+            <a ng-click="scrollTo('git')">Git</a> <!-------scrollTo more info
+          </td>
+
           <td class="cal">React</td>
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
