--- a/components/list.html
+++ b/components/list.html
@@ -1,5 +1,21 @@
 <!-- this component is showing the info in the list -->
 
+<section ng-controller="ShowDoController as ShowDoCtrl">
+
+    <ul class="list-unstyled">
+        <li ng-repeat="track in tracks" class="tracks">
+            <div class="d-flex flex-row justify-content-between">
+              <div class="p-2"><h4>{{track.title}}</h4></div>
+              <div class="p-2" ng-click="showDetails = ! showDetails"><i class="fa fa-angle-down fa-2x track-arrow" aria-hidden="true"></i></div>
+            </div>
+            <div class="track-details" ng-class="{ 'hidden': ! showDetails }">
+             {{track.expect}}
+            </div>
+        </li><!-- end ngRepeat: track in tracks --><li ng-repeat="track in tracks" class="tracks ng-scope">
+    </ul>
+
+</section>
+
 <div class="eventDark">
     <div class="row">
         <div class="col-sm-5">
