--- a/components/list.html
+++ b/components/list.html
@@ -1,7 +1,10 @@
 <!-- this component is showing the info in the list -->
+
 <section ng-controller="ShowDoController as ShowDoCtrl">
     <ul class="list-unstyled">
-        <li ng-repeat="track in tracks" class="tracks">
+        <li ng-repeat="track in tracks" ng-style="{'background-image': 'url(' + track.imgSrc + ')'}">
+            <!--<div><img ng-src="{{track.imgSrc}}" alt="Eventbilde til {{track.title}}" class="img-fluid"></div>-->
+            <div class="tracks">
             <div class="d-flex flex-row justify-content-between">
                 <div class="p-2">
                     <h4>{{track.title}}</h4>
@@ -16,10 +19,27 @@
             <div class="track-details" ng-class="{ 'hidden': ! showDetails }">
              {{track.expect}}
             </div>
+            </div>
         </li>
     </ul>
 </section>
 
-<!--
-<div class="eventDark"><div class="row"><div class="col-sm-5"><img src="img/event1.jpg" class="img-fluid" alt="Bilde av event"></div><div class="col-sm-7"><h2>Gameplan</h2><p class="lead">kl. 13 i Room OSL - 301</p></div></div></div><div id="git" class="eventLight"><div class="row"><div class="col-sm-5"><img src="img/git.png" class="img-fluid" alt="Bilde av git-event"></div><div class="col-sm-7"><h2>Git</h2><p class="lead">kl. 13 i Room OSL - 301</p></div></div></div><div class="eventDark"><div class="row"><div class="col-sm-5"><img src="img/event1.jpg" class="img-fluid" alt="Bilde av event"></div><div class="col-sm-7"><h2>Gameplan</h2><p class="lead">kl. 13 i Room OSL - 301</p></div></div></div>
+<!-- _CARD LIST STYLE_
+<section ng-controller="ShowDoController as ShowDoCtrl">
+    <ul class="list-unstyled">
+        <li ng-repeat="track in tracks">
+
+            <div class="card mb-3">
+                <img ng-src="{{track.imgSrc}}" alt="Eventbilde til {{track.title}}" class="card-img-top" >
+                <div class="card-block">
+                    <h4 class="card-title">{{track.title}}</h4>
+                    <p ng-click="showDetails = ! showDetails"><i ng-model="collapsed"
+                        ng-click="collapsed=!collapsed"
+                        ng-class="{'fa fa-angle-up fa-2x':collapsed,'fa fa-angle-down fa-2x':!collapsed}" class="track-arrow" aria-hidden="true"></i></p>
+                    <p class="card-text track-details" ng-class="{ 'hidden': ! showDetails }">{{track.expect}}</p>
+                </div>
+            </div>
+        </li>
+    </ul>
+</section>
 -->
