--- a/components/calender.html
+++ b/components/calender.html
@@ -1,21 +1,16 @@
 <!-- this component shows the info in the calender -->
 
-<div class="table table-responsive" ng-controller = "ShowDoController">
+<div class="table table-responsive">
 
     <a ng-click="scrollTo('git')">More info: Git TEST</a><!--scrollTo more info TEST-->
 
     <table>
 
-        <tr ng-repeat = "eve in events">
-            <td>{{eve.title}}</td>
 
-        </tr>
-
-        <!--
         <tr>
 
           <td class="cal">
-            <a ng-click="scrollTo('git')">Git</a> <!-------scrollTo more info
+            <a ng-click="scrollTo('git')">Git</a> <!-------scrollTo more info -->
           </td>
 
           <td class="cal">React</td>
@@ -38,6 +33,6 @@
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
           <td class="cal">Kake bakeing</td>
-        </tr> -->
+        </tr>
     </table>
 </div>
