--- a/components/calender.html
+++ b/components/calender.html
@@ -2,17 +2,13 @@
 
 <div class="table table-responsive">
 
-    <a ng-click="scrollTo('git')">More info: Git TEST</a><!--scrollTo more info TEST-->
 
     <table>
 
 
         <tr>
 
-          <td class="cal">
-            <a ng-click="scrollTo('git')">Git</a> <!-------scrollTo more info -->
-          </td>
-
+          <td class="cal JStrack1"></td>
           <td class="cal">React</td>
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
@@ -20,7 +16,7 @@
         </tr>
 
         <tr>
-          <td class="cal">Git</td>
+          <td class="cal JStrack1">Git</td>
           <td class="cal">React</td>
           <td class="cal">Gameplan</td>
           <td class="cal">konkuranse i kaffe drikking</td>
@@ -28,7 +24,7 @@
         </tr>
 
         <tr>
-          <td class="cal">Cakerating for show and do</td>
+          <td class="cal JStrack1">Cakerating for show and do</td>
           <td class="cal">React</td>
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
