--- a/components/calender.html
+++ b/components/calender.html
@@ -9,26 +9,103 @@
         <tr>
 
           <td class="cal JStrack1"></td>
-          <td class="cal">React</td>
-          <td class="cal">Gameplan</td>
+          <td class="cal JStrack2"></td>
+          <td class="cal JStrack4"></td>
           <td class="cal">Gulp</td>
           <td class="cal">Kake bakeing</td>
         </tr>
 
         <tr>
-          <td class="cal JStrack1">Git</td>
-          <td class="cal">React</td>
-          <td class="cal">Gameplan</td>
+          <td class="cal JStrack1"></td>
+          <td class="cal JStrack2"></td>
+          <td class="cal JStrack5"></td>
           <td class="cal">konkuranse i kaffe drikking</td>
           <td class="cal">Kake bakeing</td>
         </tr>
 
         <tr>
-          <td class="cal JStrack1">Cakerating for show and do</td>
-          <td class="cal">React</td>
+          <td class="cal JStrack1"></td>
+          <td class="cal JStrack3"></td>
           <td class="cal">Gameplan</td>
           <td class="cal">Gulp</td>
           <td class="cal">Kake bakeing</td>
         </tr>
     </table>
 </div>
+<script>
+$(function(){
+
+            //htmlObjekter
+            var $prevBtn;
+            var $thisWeekBtn;
+            var $nextBtn;
+            var $infoTest;
+            var $JStrack1;
+
+
+
+
+            var init = function(){
+
+                var setHTMLObjects = function(){
+                    $prevBtn = $("#prevBtn");
+                    $thisWeekBtn = $("#thisWeekBtn");
+                    $nextBtnBtn = $("#nextBtnBtn");
+                    $infoTest = $("#infoTest").get(0);
+                    $JStrack1 = $("#JStrack1");
+
+        }();//end set html objects
+
+
+
+            }();//end init
+
+            var events = [];
+
+
+            $.ajax({
+                type: "GET",
+                dataType: "json",
+                url: 'info.json',
+                success: 1
+                }).done(function ( json ) {
+                    events = json[0].events;
+                    showInfo(json);
+               // console.log(events);
+            })
+              .fail(function (XMLHttpRequest, textStatus, errorThrown){
+                alert("Status: " + textStatus); alert("Error: " + errorThrown);
+                console.error("Status: " + textStatus + " , Error: " + errorThrown)
+            })
+
+                function showInfo(json){
+                    $(".JStrack1")
+                        .append(events[0].title + " ", events[0].room);
+                    $(".JStrack2")
+                        .append(events[1].title + " ", events[1].room);
+                    $(".JStrack3")
+                        .append(events[2].title + " ", events[2].room);
+                    $(".JStrack4")
+                        .append(events[3].title + " ", events[3].room);
+                    $(".JStrack5")
+                        .append(events[4].title + " ", events[4].room);
+                };
+
+     /*       function getInfoJson(url){}
+
+
+
+        $.ajax({
+            type: "GET",
+            dataType: "json",
+            url: infoUrl ,
+            data: data,
+            success: success
+            });
+
+        */
+
+        }());
+        //delete
+
+</script>
