--- a/components/calender-flexbox.html
+++ b/components/calender-flexbox.html
@@ -1,7 +1,8 @@
 <!-- this component shows the info in the calender with flexbox boostrap v4-alpha -->
 
 <!-- TABLE VISIBLE ONLY ON LARGE SCREENS -->
-<div class="hidden-sm-down">
+<div class="cal-desktop">
+    <h2>Desktop calendar</h2>
 <table class="table">
     <!--
     <thead class="thead-default">
@@ -14,129 +15,107 @@
             <th>Track 5</th>
         </tr>
     </thead>
--->
+    -->
     <tbody>
         <tr>
-            <th scope="row">1300-
+            <th>1300-
                 <br>1345
             </th>
-            <td class="cal" rowspan="3">
+            <td>
                 <strong>React/Redux</strong>
                 (track 1)
             </td>
-            <td class="cal" rowspan="3">
+            <td>
                 <strong>Team Tools: Gameplan</strong>
                 (track 2)
             </td>
-            <td class="cal" rowspan="2">
+            <td>
                 <strong>Elasticsearch Class</strong>
                 (track 3)
             </td>
-            <td class="cal" rowspan="2">
+            <td>
                 <strong>Azure</strong>
                 (track 4)
             </td>
-            <td class="cal" rowspan="1">
+            <td>
                 <strong>New Digital Product Review</strong>
                 (track 5)
             </td>
         </tr>
         <tr>
-            <th scope="row">1400-
+            <th>1400-
                 <br>1445
             </th>
-            <td class="cal">
+            <td>
                 <strong>Co-creation</strong>
                 (track 5)
             </td>
         </tr>
         <tr>
-            <th scope="row">1500-
+            <th>1500-
                 <br>1545
             </th>
-            <td class="cal">
+            <td>
                 <strong>Elasticsearch Class </strong>
                 (Track 3)
             </td>
             <td></td>
-            <td class="cal">
+            <td>
                 <strong>Classic project setup to product thinking</strong>
                 (track 5)
             </td>
         </tr>
-    </tbody>
+        </tbody>
 </table>
 </div>
 
 <!-- DIV VISIBLE ONLY ON SMALL SCREENS -->
-<div class="hidden-md-up">
-<div class="container">
-  <div class="row">
-    <div class="col-3">
-      <div class="track-time-mob">1300-<br>1345</div>
-    </div>
-    <div class="col">
-      <div class="row">
-            <div class="col cal-mob">
-                React/Redux
-            </div>
+<div id="cal-mobile">
+    <div id="main">
+        <div>
+          <div class="track-time-mob">1300-<br>1345</div>
         </div>
-        <div class="row">
-            <div class="col cal-mob">
-                Team tools
-            </div>
-        </div>
-        <div class="row">
-            <div class="col cal-mob">
-                Elastic search Class
-            </div>
-        </div>
-        <div class="row">
-            <div class="col cal-mob">
-                Azure tools
-            </div>
-        </div>
-        <div class="row">
-            <div class="col cal-mob">
-                New Digital Products
-            </div>
-        </div>
+        <div>
+                <div class="track-mob">
+                    React/Redux
+                </div>
+                <div class="track-mob">
+                    Team tools
+                </div>
+                <div class="track-mob">
+                    Elastic search Class
+                </div>
+                <div class="track-mob">
+                    Azure tools
+                </div>
+                <div class="track-mob">
+                    New Digital Products
+                </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-<div class="row">
-    <div class="col-3">
-      <div class="track-time-mob">1400-<br>1445</div>
-    </div>
-    <div class="col">
-      <div class="row">
-            <div class="col cal-mob">
-                React/Redux
+    <div id="main">
+            <div>
+              <div class="track-time-mob">1400-<br>1445</div>
             </div>
-        </div>
-</div>
-</div>
-</div>
+            <div>
+                <div class="track-mob">
+                    React/Redux
+                </div>
+            </div>
+    </div>
 
-<div class="container">
-<div class="row">
-    <div class="col-3">
-      <div class="track-time-mob">1500-<br>1545</div>
-    </div>
-    <div class="col">
-      <div class="row">
-            <div class="col cal-mob">
-                Elastic Search Class
+    <div id="main">
+            <div>
+              <div class="track-time-mob">1500-<br>1545</div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col cal-mob">
-                Classic project setup to product thinking
+            <div>
+                    <div class="track-mob">
+                        Elastic Search Class
+                    </div>
+                    <div class="track-mob">
+                        Classic project setup to product thinking
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</div>
-</div>
 </div>
