scrollToMoreInfo() (Ikkje fungerande i calander.html)

--- a/components/list.html
+++ b/components/list.html
@@ -1,23 +1,20 @@
 <!-- this component is showing the info in the list -->
 
 
-<section ng-controller="ShowDoController as ShowDoCtrl">
+<section >
     <ul class="list-unstyled">
-        <li ng-repeat="track in tracks">
+        <li>
 
-            <div class="tracks">
+            <div id="gitList" class="tracks">
             <div class="d-flex flex-row justify-content-between">
                 <div class="p-2">
                     <h4>{{track.title}}</h4>
                 </div>
-                <div class="p-2"
-                    ng-click="showDetails = ! showDetails">
-                    <i ng-model="collapsed"
-                        ng-click="collapsed=!collapsed"
-                        ng-class="{'fa fa-angle-up fa-2x':collapsed,'fa fa-angle-down fa-2x':!collapsed}" class="track-arrow" aria-hidden="true"></i>
+                <div class="p-2">
+                    <i class="track-arrow" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="track-details" ng-class="{ 'hidden': ! showDetails }">
+            <div class="track-details">
              {{track.expect}}
             </div>
             </div>
