--- a/components/calender.html
+++ b/components/calender.html
@@ -1,102 +1,92 @@
 <!-- this component shows the info in the calender -->
-
+<div id="gitCal">TEST SCROLL</div>
 <div class="table">
 
     <table>
 
         <tr>
-
-          <td class="cal JStrack1"></td>
-          <td class="cal JStrack2"></td>
-          <td class="cal JStrack4"></td>
-          <td class="cal JStrack6"></td>
-          <td class="cal JStrack9"></td>
+            <td class="cal JStrack1"></td>
+            <td class="cal JStrack2"></td>
+            <td class="cal JStrack4"></td>
+            <td class="cal JStrack6"></td>
+            <td class="cal JStrack9"></td>
         </tr>
 
         <tr>
-          <td class="cal JStrack1"></td>
-          <td class="cal JStrack2"></td>
-          <td class="cal JStrack4"></td>
-          <td class="cal JStrack7"></td>
-          <td class="cal JStrack10"></td>
+            <td class="cal JStrack1"></td>
+            <td class="cal JStrack2"></td>
+            <td class="cal JStrack4"></td>
+            <td class="cal JStrack7"></td>
+            <td class="cal JStrack10"></td>
         </tr>
 
         <tr>
-          <td class="cal JStrack1"></td>
-          <td class="cal JStrack3"></td>
-          <td class="cal JStrack5"></td>
-          <td class="cal JStrack8"></td>
+            <td class="cal JStrack1"></td>
+            <td class="cal JStrack3"></td>
+            <td class="cal JStrack5"></td>
+            <td class="cal JStrack8"></td>
         </tr>
     </table>
 </div>
 <script>
-$(function(){
+    $(function(){
 
-            //htmlObjekter
-            var $prevBtn;
-            var $thisWeekBtn;
-            var $nextBtn;
-            var $infoTest;
-
-
-            var init = function(){
-
-                var setHTMLObjects = function(){
-                    $prevBtn = $("#prevBtn");
-                    $thisWeekBtn = $("#thisWeekBtn");
-                    $nextBtnBtn = $("#nextBtnBtn");
-                    $infoTest = $("#infoTest").get(0);
+        //htmlObjekter
+        var $prevBtn;
+        var $thisWeekBtn;
+        var $nextBtn;
+        var $infoTest;
 
 
-        }();//end set html objects
+        var init = function(){
+
+            var setHTMLObjects = function(){
+                $prevBtn = $("#prevBtn");
+                $thisWeekBtn = $("#thisWeekBtn");
+                $nextBtnBtn = $("#nextBtnBtn");
+                $infoTest = $("#infoTest").get(0);
+            }();//end set html objects
+        }();//end init
+
+        var events = [];
 
 
+        $.ajax({
+            type: "GET",
+            dataType: "json",
+            url: 'info.json',
+            success: 1
+        }).done(function ( json ) {
+            events = json[0].events;
+            showInfo(json);
+            // console.log(events);
+        })
+            .fail(function (XMLHttpRequest, textStatus, errorThrown){
+            alert("Status: " + textStatus); alert("Error: " + errorThrown);
+            console.error("Status: " + textStatus + " , Error: " + errorThrown)
+        })
 
-            }();//end init
-
-            var events = [];
-
-
-            $.ajax({
-                type: "GET",
-                dataType: "json",
-                url: 'info.json',
-                success: 1
-                }).done(function ( json ) {
-                    events = json[0].events;
-                    showInfo(json);
-               // console.log(events);
-            })
-              .fail(function (XMLHttpRequest, textStatus, errorThrown){
-                alert("Status: " + textStatus); alert("Error: " + errorThrown);
-                console.error("Status: " + textStatus + " , Error: " + errorThrown)
-            })
-
-                function showInfo(json){
-                    $(".JStrack1")
-                        .append(events[0].title + ("<br>") + " Room: ", events[0].room);
-                    $(".JStrack2")
-                        .append(events[1].title + ("<br>") + " Room: ", events[1].room);
-                    $(".JStrack3")
-                        .append(events[2].title + ("<br>") + " Room: ", events[2].room);
-                    $(".JStrack4")
-                        .append(events[3].title + ("<br>") + " Room: ", events[3].room);
-                    $(".JStrack5")
-                        .append(events[4].title + ("<br>") + " Room: ", events[4].room);
-                    $(".JStrack6")
-                        .append(events[5].title + ("<br>") + " Room: ", events[5].room);
-                    $(".JStrack7")
-                        .append(events[6].title + ("<br>") + " Room: ", events[6].room);
-                    $(".JStrack9")
-                        .append(events[7].title + ("<br>") + " Room: ", events[7].room);
-                    $(".JStrack8")
-                        .append(events[8].title + ("<br>") + " Room: ", events[8].room);
-                    $(".JStrack10")
-                        .append(events[9].title + ("<br>") + " Room: ", events[9].room);
-                };
+        function showInfo(json){
+            $(".JStrack1")
+                .append(events[0].title + ("<br>") + " Room: ", events[0].room);
+            $(".JStrack2")
+                .append(events[1].title + ("<br>") + " Room: ", events[1].room);
+            $(".JStrack3")
+                .append(events[2].title + ("<br>") + " Room: ", events[2].room);
+            $(".JStrack4")
+                .append(events[3].title + ("<br>") + " Room: ", events[3].room);
+            $(".JStrack5")
+                .append(events[4].title + ("<br>") + " Room: ", events[4].room);
+            $(".JStrack6")
+                .append(events[5].title + ("<br>") + " Room: ", events[5].room);
+            $(".JStrack7")
+                .append(events[6].title + ("<br>") + " Room: ", events[6].room);
+            $(".JStrack9")
+                .append(events[7].title + ("<br>") + " Room: ", events[7].room);
+        };
 
 
-        }());
+    }());
 
 
 </script>
