--- a/components/calender.html
+++ b/components/calender.html
@@ -1,11 +1,10 @@
 <!-- this component shows the info in the calender -->
-<div id="gitCal">TEST SCROLL</div>
 <div class="table">
 
     <table>
 
         <tr>
-            <td class="cal JStrack1"></td>
+            <td id="gitCal" class="cal JStrack1"></td><!--scrollToMoreInfo()-->
             <td class="cal JStrack2"></td>
             <td class="cal JStrack4"></td>
             <td class="cal JStrack6"></td>
