Brand site style to index.html

--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,15 @@
 <!-- this component shows info in header -->
 
-<div class="header">
-    <div class="logo">Show & Do</div>
-</div>
+<header class="pageHeader">
+			<div class="wrapper basic">
+				<a class="logo" href="index.html">
+					<img src="../images/logo.svg" alt="Making Waves Logo">
+				</a>
+                <button>Menu</button>
+                <nav class="mainMenu">
+					<ul>
+                        <li><a href="#">Add track</a></li>
+					</ul>
+				</nav>
+			</div>
+</header>
