--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,102 @@
+/* volte */
+
+@font-face {
+    font-family: "Volte Light";
+    src: url('../fonts/Volte-Light.woff2') format('woff2'), url('../fonts/Volte-Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Light Italic";
+    src: url('../fonts/Volte-LightItalic.woff2') format('woff2'), url('../fonts/Volte-LightItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Regular";
+    src: url('../fonts/Volte-Regular.woff2') format('woff2'), url('../fonts/Volte-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Regular Italic";
+    src: url('../fonts/Volte-RegularItalic.woff2') format('woff2'), url('../fonts/Volte-RegularItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Medium";
+    src: url('../fonts/Volte-Medium.woff2') format('woff2'), url('../fonts/Volte-Medium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Medium Italic";
+    src: url('../fonts/Volte-MediumItalic.woff2') format('woff2'), url('../fonts/Volte-MediumItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Semibold";
+    src: url('../fonts/Volte-Semibold.woff2') format('woff2'), url('../fonts/Volte-Semibold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Semibold Italic";
+    src: url('../fonts/Volte-SemiboldItalic.woff2') format('woff2'), url('../fonts/Volte-SemiboldItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Bold";
+    src: url('../fonts/Volte-Bold.woff2') format('woff2'), url('../fonts/Volte-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Volte Bold Italic";
+    src: url('../fonts/Volte-BoldItalic.woff2') format('woff2'), url('../fonts/Volte-BoldItalic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/* aften */
+
+@font-face {
+    font-family: 'Aften Screen';
+    src: url('../fonts/aften_screen.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Aften Screen';
+    src: url('../fonts/aften_screen_italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Aften Screen';
+    src: url('../fonts/aften_screen_bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
 
 
 /***************** constants ************************/
+
 
 /* _MILITÆRSYKEHUSGRØNN_
 $basecolor: #A8CCC1;
@@ -8,145 +104,750 @@ $eventcolor: #697F79;*/
 
 $basecolor: #1B98E0;
 $eventcolor: #D9D9D9;
-
-
 @mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-          border-radius: $radius;
+    -webkit-border-radius: $radius;
+    -moz-border-radius: $radius;
+    -ms-border-radius: $radius;
+    border-radius: $radius;
 }
 
 
-/***************** index - Main content ************************/
+/***************** general ************************/
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-family: 'Aften Screen', sans-serif;
+    font-size: 1.25em;
+    line-height: 1.6;
+}
+
 body {
-    background-color: $basecolor;
-    color: white;
+    background: #f6f6f6;
+    color: #3d3d3d;
     margin: 0;
-    font-family: "Arial", sans-serif;
+}
 
-    .container {
-        background-color: white;
-        color: black;
-        padding: 20px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+    margin: 0;
+}
 
-        .eventDark {
-            background-color: darken($eventcolor, 20%);
-            padding: 30px;
-            color: white;
-        }
+h1 {
+    font-family: 'Volte Bold';
+    font-size: 5.5em;
+    line-height: 1;
+    word-wrap: break-word;
+    margin: 0 200px 40px 0;
+    /* right space for download button */
+    color: #ff5c5c;
+}
 
-        .eventLight {
-            background-color: $eventcolor;
-            padding: 30px;
-            color: white;
-        }
+h2,
+h3 {
+    font-family: 'Volte Semibold';
+}
+
+h2 {
+    font-size: 1.9em;
+    line-height: 1.3;
+    margin-bottom: 10px;
+}
+
+h3 {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
+h4,
+h5,
+h6 {
+    font-weight: bold;
+    font-size: 1em;
+}
+
+.lead {
+    font-family: 'Volte Medium';
+    font-size: 1.5em;
+    margin-bottom: 80px;
+}
+
+@media (max-width: 900px) {
+    html {
+        font-size: 1em;
     }
-
-
-/**************** Header *************************/
-    .header {
-        background-color: darken($basecolor, 20%);
-        color: white;
-
-        h1, h2, h3 {
-            max-width: 1200px;
-            margin-left: auto;
-            margin-right: auto;
-            padding: 20px;
-        }
-
-        .logo {
-            padding: 1em;
-        }
-
+    h1 {
+        font-size: 2em;
+        line-height: 1.3;
+        margin-right: 50px;
     }
-/******************* Navigation **********************/
+    h2 {
+        font-size: 1.4em;
+    }
+    h3 {
+        font-size: 1.2em;
+    }
+    .lead {
+        font-size: 1.2em;
+        margin-bottom: 40px;
+    }
+}
 
-    .nav {
+a {
+    color: inherit;
+    &:hover {
+        text-decoration: none;
+    }
+}
 
+ul,
+ol,
+p {
+    margin: 0 0 40px 0;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    ul {
+        margin: 0;
+    }
+}
+
+p {
+    max-width: 700px;
+}
+
+figure {
+    margin: 0;
+}
+
+figcaption {
+    margin-top: 10px;
+}
+
+img {
+    max-width: 100%;
+}
+
+a img {
+    border: none;
+}
+
+iframe {
+    max-width: 100%;
+    border: none;
+}
+
+
+/********************************************
+wrappers
+********************************************/
+
+.wrapper {
+    box-sizing: content-box;
+    padding: 0 5%;
+    margin: 0 auto;
+    &.full {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    &.basic {
+        max-width: 1200px;
+    }
+    &.narrow {
+        max-width: 750px;
+    }
+}
+
+
+/********************************************
+nav general
+********************************************/
+
+nav {
+    ul {
+        list-style: none;
         padding: 0;
         margin: 0;
-
-        a {
-          color: darken($basecolor, 20%);
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+            text-decoration: underline;
+            color: #06f;
         }
+    }
+    .Active a {
+        text-decoration: underline;
+        color: #06f;
+    }
+}
 
-        a:hover {
-            color: $eventcolor;
+#navWeek {
+    width: auto;
+    bottom: 1em;
+    display: -webkit-flex;
+    /* Safari */
+    display: flex;
+    justify-content: space-between;
+    padding-top: 0.5rem;
+}
+
+.navItem {
+    -webkit-flex: 1;
+    /* Safari 6.1+ */
+    -ms-flex: 1;
+    /* IE 10 */
+    flex: 1;
+}
+
+
+/********************************************
+inputs
+********************************************/
+
+button {
+    font-family: "Volte Semibold";
+    font-size: inherit;
+    line-height: inherit;
+    background-color: white;
+    color: #06f;
+    border: 3px solid #06f;
+    border-radius: 0;
+    padding: 10px 20px;
+    margin: 0;
+    -webkit-appearance: none;
+    cursor: pointer;
+    &.subtle {
+        padding: 5px 10px;
+        border: none;
+        border: 1px solid #ccc;
+        font-family: inherit;
+        color: inherit;
+        font-size: .778rem;
+    }
+}
+
+
+/********************************************
+pageHeader
+********************************************/
+
+.pageHeader {
+    background: white;
+    overflow: hidden;
+    min-height: 100px;
+    padding-top: 35px;
+    margin-bottom: 100px;
+    .logo {
+        background: url('../images/logo.svg') no-repeat center, url('../images/logo_col1.svg') no-repeat -10000px center;
+        /* preload */
+        display: inline-block;
+        vertical-align: top;
+        &:hover {
+            background: url('../images/logo_col1.svg') no-repeat center;
         }
-
+        img {
+            display: block;
+            height: 27px;
+            opacity: 0;
+        }
     }
-
-/****************** Calender ***********************/
-
-    .cal {
-        background-color: lighten($basecolor, 10%);
-        padding: 15px;
-        border: 2px solid lighten($basecolor, 100%);
-        @include border-radius(10px);
-    }
-
-    .cal-mob {
-        background-color: lighten($basecolor, 10%);
-        padding: 0.8em;
-        margin-left: 1em;
-        margin-right: 1em;
-        margin-bottom: 0.2em;
-        @include border-radius(4px);
-    }
-
-    .track-time-mob {
-        font-size: 1.2em;
+    .logoText {
+        margin-left: 1.5em;
         font-weight: 600;
     }
+}
 
-/********************* List ********************/
 
-    .tracks {
-        color: darken($basecolor, 90%);
-        padding: 1.5em;
-        margin-bottom: 1em;
-        @include border-radius(4px);
+/* button (menu) */
 
-        h4 {
-            color: black;
-            background-color: white;
-            padding: 5px;
-        }
-
-        a {
-            color: white;
-        }
+.pageHeader button {
+    border-style: solid;
+    border-color: #3d3d3d;
+    &:before,
+    &:after {
+        border-style: solid;
+        border-color: #3d3d3d;
     }
-
-    .bg-fade {
-        background-color:rgba(255,0,0,0.5);
+    float: right;
+    font-size: 0;
+    background: none;
+    border-width: 0;
+    position: relative;
+    top: -10px;
+    right: -10px;
+    width: 40px;
+    height: 40px;
+    &:before,
+    &:after {
+        content: "";
+        position: absolute;
+        width: 25px;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
     }
-
-
-    .track-arrow {
-        line-height: 5px;
+    &:before {
+        border-width: 1px 0;
+        height: 15px;
     }
-    .track-details {
-    max-height: 400px;
-    transition: .8s;
-    overflow: hidden;
+    &:after {
+        border-width: 1px 0 0 0;
+        height: 0;
     }
+}
 
-    .track-details.hidden {
-    max-height: 0;
-    }
-
-    .scrollToTopBtn{
-        /*text-align: center;*/
-        /*position: relative;*/
+@media (min-width: 1201px) {
+    .pageHeader {
         position: fixed;
-        bottom: 10px;
-        right: 10px;
-        display: none;
-        color: rgb(0, 0, 0);
+        width: 100%;
+        z-index: 10;
+        .logo {
+            float: left;
+            margin-right: 60px;
+        }
+        button {
+            display: none;
+        }
     }
+}
+
+@media (max-width: 900px) {
+    .pageHeader {
+        padding-top: 20px;
+        margin-bottom: 40px;
+        min-height: 60px;
+        .logo img {
+            height: 20px;
+        }
+    }
+}
 
 
-}//End body
+/********************************************
+mainMenu
+********************************************/
+
+.mainMenu {
+    font-family: 'Volte Semibold';
+    text-transform: uppercase;
+    font-size: .889em;
+    overflow: hidden;
+    transition: all .5s;
+    a {
+        padding: 10px;
+        display: block;
+        &[href=""] {
+            opacity: .2;
+        }
+    }
+}
+
+@media (min-width: 1201px) {
+    .mainMenu {
+        position: relative;
+        top: -7px;
+        white-space: nowrap;
+        li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .mainMenu {
+        clear: both;
+        text-align: center;
+    }
+    .pageHeader {
+        &:not(.open) .mainMenu {
+            max-height: 0;
+        }
+        &.open .mainMenu {
+            max-height: 1000px;
+            margin-bottom: 40px;
+        }
+    }
+    .mainMenu li {
+        margin-bottom: 20px;
+    }
+}
+
+
+/********************************************
+main
+********************************************/
+
+main {
+    display: block;
+    .wrapper {
+        margin-bottom: 120px;
+        &.top {
+            margin-bottom: 0;
+        }
+    }
+    img,
+    svg {
+        display: block;
+    }
+    figure {
+        margin-bottom: 80px;
+    }
+}
+
+@media (min-width: 1201px) {
+    main {
+        padding-top: 200px;
+        /* space for sticky header */
+    }
+    .frontpage main {
+        padding-top: 100px;
+    }
+}
+
+@media (max-width: 900px) {
+    main .hero {
+        margin-bottom: 40px;
+    }
+}
+
+.prefix:after {
+    content: "";
+    width: 70px;
+    height: 3px;
+    background: #3d3d3d;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 20px;
+}
+
+
+/********************************************
+links (list)
+********************************************/
+
+.links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    li {
+        margin-bottom: 20px;
+    }
+    p {
+        margin: 0;
+    }
+}
+
+
+/********************************************
+expand / expandable
+********************************************/
+
+.expand {
+    &:after {
+        content: "";
+        background: url('../images/arrow_down.svg') no-repeat center;
+        background-size: contain;
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        margin-left: 10px;
+        position: relative;
+        top: 3px;
+    }
+    &.active:after {
+        transform: rotate(180deg);
+        top: 1px;
+    }
+}
+
+.expandable {
+    transition: all .5s;
+    &.open {
+        max-height: 2000px;
+    }
+    &:not(.open) {
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+        max-height: 0;
+        overflow: hidden;
+    }
+}
+
+
+/********************************************
+frontpage
+********************************************/
+
+.frontpage {
+    .pageHeader {
+        margin-bottom: 0px;
+    }
+    h1 {
+        position: relative;
+        margin-right: 0;
+        color: inherit;
+    }
+    .lead {
+        margin-bottom: 40px;
+    }
+}
+
+@media (min-width: 901px) {
+    .frontpage .wrapper.top {
+        padding-left: 15%;
+    }
+}
+
+@media (min-width: 1201px) {
+    .frontpage h1 {
+        font-size: 7em;
+    }
+}
+
+@media (min-width: 901px) {
+    .frontpage h1:before {
+        content: "";
+        background: #fc0;
+        display: inline-block;
+        vertical-align: top;
+        position: absolute;
+        width: 150px;
+        height: 12px;
+        left: -170px;
+        top: 19%;
+    }
+}
+
+@media (max-width: 900px) {
+    .frontpage h1 {
+        margin: 0 0 20px 0;
+    }
+}
+
+
+/********************************************
+qa
+********************************************/
+
+.qa {
+    margin: 200px 0 80px;
+    * {
+        transition: all .5s;
+    }
+    h2,
+    li > * {
+        box-sizing: content-box;
+        max-width: 1200px;
+        margin-right: auto;
+        margin-left: auto;
+        padding-right: 5%;
+        padding-left: 5%;
+    }
+    h2 {
+        margin-bottom: 20px;
+    }
+    li {
+        background: white;
+        margin-bottom: 10px;
+        > a {
+            display: block;
+            text-decoration: none;
+            position: relative;
+            padding-top: 30px;
+            padding-bottom: 15px;
+            overflow: hidden;
+            &:after {
+                content: "";
+                background: url('../images/arrow_down.svg') no-repeat center;
+                background-size: contain;
+                position: absolute;
+                width: 16px;
+                height: 16px;
+                right: 5%;
+                top: 35px;
+            }
+        }
+    }
+    h3 {
+        font-size: 1em;
+        margin-right: 40px;
+        /* space for arrow */
+    }
+    li {
+        > div {
+            overflow: hidden;
+        }
+        &:not(.open) > div {
+            max-height: 0;
+        }
+        &.open > {
+            div {
+                max-height: 1000px;
+            }
+            a:after {
+                transform: rotate(180deg);
+            }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .qa {
+        margin: 100px 0 40px;
+    }
+}
+
+@media (min-width: 901px) {
+    .qa li > a:hover h3 {
+        text-decoration: underline;
+    }
+}
+
+
+/********************************************
+Flex for rows in calendar
+********************************************/
+
+#main {
+    width: auto;
+    height: auto;
+    display: -webkit-flex;
+    /* Safari */
+    display: flex;
+    margin-right: 1em;
+    margin-top: 0.5em;
+    div {
+        -webkit-flex-grow: 0;
+        /* Safari 6.1+ */
+        -webkit-flex-shrink: 0;
+        /* Safari 6.1+ */
+        -webkit-flex-basis: 40px;
+        /* Safari 6.1+ */
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 60px;
+        &:nth-of-type(2) {
+            -webkit-flex-basis: 92%;
+            /* Safari 6.1+ */
+            flex-basis: 92%;
+        }
+    }
+}
+
+.track-mob {
+    background: #06f;
+    border: 1px solid white;
+    color: white;
+    padding: 1em;
+    margin: 0.5em;
+    border-radius: 10px;
+}
+
+.track-time-mob {
+    font-size: 1.2em;
+    font-weight: 600;
+    padding-bottom: 1em;
+}
+
+
+/********************************************
+List
+********************************************/
+
+.scrollToTopBtn {
+    /*text-align: center;*/
+    /*position: relative;*/
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+    color: rgb(0, 0, 0);
+}
+
+.cut-image {
+    width: auto;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    margin: 0 auto;
+    display: block;
+    opacity: 0.5;
+}
+
+@media (min-width: 900px) {
+    .cut-image {
+        height: 600px;
+    }
+}
+
+.image-to-cut {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+/********************************************
+show/hide desktop cal & mobile cal
+********************************************/
+
+@media screen and (min-width: 768px) {
+    #cal-mobile {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #cal-desktop {
+        display: none;
+    }
+}
+
+
+/********************************************
+table
+********************************************/
+
+table,
+td,
+th {
+    border: 1px solid #ddd;
+    text-align: left;
+    vertical-align: baseline;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    padding: 15px;
+    background: white;
+}
+
+td {
+    padding: 15px;
+    background: #06f;
+    color: white;
+    &:hover {
+        background: white;
+        color: #242424;
+    }
+}
